Correct text alignement of explanatory section in desktop solution

--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,8 @@ body{
     text-align:center;  
 }@media screen and (min-width: 500px){
     .explanation{
-        padding: 45px 0px 45px 55px;        
+        padding: 45px 0px 45px 55px;  
+        text-align:left;      
     }
 }
 
@@ -78,6 +79,7 @@ body{
 }@media screen and (min-width: 500px){
     .explanation > h1{         
         font-size: 2.5em;   
+        text-align: left;
     }    
 }
 
@@ -91,9 +93,10 @@ body{
 }@media screen and (min-width: 500px){
     .explanation > p {
         font-family: "Open Sans";
-        font-size: 1.1em;    
+        font-size: 1.15em;    
         padding: 20px 0;
         line-height: 1.75;        
+        text-align: left;
     }
 }
 
